--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,11 @@ logging.level.io.jmix=info
 
 # 'debug' or 'trace' levels help to troubleshoot security problems
 logging.level.org.springframework.security=info
+
+#!!! ЗАПОЛНИТЬ !!!
+spring.mail.host=smtp.your-email.com
+spring.mail.port=587
+spring.mail.username=your@email.com
+spring.mail.password=yourpassword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
